--- a/template.html
+++ b/template.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Tolkien Fan Club</title>
+    <title>{{ Title }}</title>
     <link href="/index.css" rel="stylesheet" />
   </head>
 
   <body>
-    <article><div><h1>Tolkien Fan Club</h1><p>I like Tolkien. Read my <a href="/majesty">first post here</a></p></div></article>
+    <article>{{ Content }}</article>
   </body>
 </html>
